# LeadHit-test-task

./: config.py  pyproject.toml  runner.py
app/: __init__.py  validator.py  views.py
app/templates/: index.html
